--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@ethersproject/providers": "^5.4.4",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@openzeppelin/contracts": "^4.7.0",
+    "@types/formidable": "^2.0.4",
+    "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
+    "formidable": "^2.0.1",
+    "formik": "^2.2.9",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-toastify": "^8.2.0",
+    "web3modal": "^1.9.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
