--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
     "next": "12.2.2",
+    "nft.storage": "^6.4.1",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
