--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "hardhat": "^2.10.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
