--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "nftmarket-two",
-  "version": "0.1.0",
+  "name": "nft-marketplace",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,40 +9,48 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.9",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@ethersproject/providers": "^5.4.4",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.2",
-    "@openzeppelin/contracts": "^4.7.0",
+    "@openzeppelin/contracts": "^4.4.1",
     "@types/formidable": "^2.0.4",
     "classnames": "^2.3.1",
-    "dotenv": "^16.0.1",
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
-    "next": "12.2.2",
-    "nft.storage": "^6.4.1",
-    "react": "18.2.0",
+    "next": "^12.0.10",
+    "nft.storage": "^6.0.0",
+    "react": "^17.0.2",
     "react-blockies": "^1.4.1",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
+    "react-dom": "^17.0.2",
     "react-toastify": "^8.2.0",
     "web3modal": "^1.9.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@types/node": "18.0.4",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "hardhat": "^2.10.1",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "17.0.4",
+    "@types/react": "17.0.38",
+    "@types/react-blockies": "^1.4.1",
+    "@types/react-toastify": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "apollo": "^2.33.9",
+    "autoprefixer": "^10.4.2",
+    "chai": "^4.3.4",
+    "eslint": "^8.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.0",
+    "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "tailwindcss": "^3.0.19",
+    "ts-node": "^10.5.0",
+    "typescript": "4.5.5"
   }
 }
